# akasha

./: .gitignore  Cargo.toml  README.md
akasha_dbs/: catalog.json  tb_0.aka
database/: ak0.record  ak1.record  ak2.record
db/: ak0.record  catalog.json  pg_0ak.record
queries/: insert.aka  select.aka  test.aka
src/: main.rs
src/frontend/: ast.rs  err.rs  lexer.rs  mod.rs  parser.rs  print.rs
src/page/: err.rs  file.rs  io.rs  mod.rs  pool.rs  tuple.rs
src/query/: builtins.rs  compiler.rs  err.rs  exec.rs  mod.rs  op.rs  optimizer.rs  planner.rs  stream.rs  transformer.rs
src/query/new_plan/: compiler.rs  err.rs  exec.rs  mod.rs  op.rs  optimizer.rs  transformer.rs
src/query/plan/: mod.rs  planners.rs
src/table/: heap.rs  interface.rs  internal.rs  mod.rs
