[package]
name = "akasha"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
combine = "4.6.7"
smallvec = "2.0.0-alpha.11"

[profile.release]
debug = true